--- a/flex-integration-api-examples/package.json
+++ b/flex-integration-api-examples/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "dotenv": "^8.2.0",
-    "sharetribe-flex-integration-sdk": "^1.4.0",
-    "sharetribe-flex-sdk": "^1.15.0"
+    "sharetribe-flex-integration-sdk": "^1.4.0"
   }
 }
