--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-moment-proptypes": "^1.8.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
+    "react-test-renderer": "^16.13.1",
     "react-with-direction": "^1.4.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
